# frndly-be

./: .env.example  .gitignore  .gitleaks.toml  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 0001_add_google_oauth_fields.py  001_initial.py  002_alerts_feature.py  003_notes_feature.py  004_folders_feature.py  005_device_tracking.py  006_vault_folders.py
api/: index.py
app/: main.py
app/api/v1/: alerts.py  auth.py  clipboard.py  dashboard.py  devices.py  folders.py  notes.py  router.py  users.py  vault.py
app/core/: config.py  deps.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  alert.py  clipboard.py  device.py  folder.py  note.py  secret.py  user.py
app/repositories/: alert_repo.py  clipboard_repo.py  device_repo.py  folder_repo.py  note_repo.py  secret_repo.py  user_repo.py
app/schemas/: alert.py  auth.py  clipboard.py  dashboard.py  device.py  folder.py  note.py  secret.py
app/services/: auth_service.py  clipboard_service.py  device_service.py  folder_service.py  note_service.py  vault_service.py
src/models/: device.py
src/routes/: devices.py
src/services/: device_service.py
